# scrapping_bot

./: .env.template  Makefile  README.md  alembic.ini  compose.yml  pyproject.toml
app/: config.py  logging.py  main.py  models.py  parser.py  repository.py  schemas.py
app/migrations/: env.py
app/migrations/versions/: 1319ae02238c_add_relationship_with_telegram_comments_.py  3aa9b3fb02e6_add_telegram_models.py  49c047448c5f_create_vkpost_model.py  5db890c8112e_fix_names_in_vkpost_model.py  77a2bebc8b4b_add_comment_moderation_label_model.py  8006668464a6_add_parsed_field_to_vkpost_model.py  9158f471747d_add_back_populate_for_comments.py  a219ca4cae6d_fix.py  a50d8bc6698b_fix.py  a6bf92f20272_.py  ad7688278c8a_refactor_labels.py  cf219ca0aeba_remove_moderator_note_and_name_from_.py
app/routers/: start.py
app/scaffolding_backend/: main.py
app/scaffolding_backend/api/: comments.py  dataset.py
app/scaffolding_backend/models/: moderation_label.py
app/scaffolding_backend/repositories/: comments.py
app/scaffolding_backend/schemas/: comment.py  moderation.py
app/scaffolding_backend/services/: moderation_service.py
app/scaffolding_frontend/: index.html  package-lock.json  package.json
app/scaffolding_frontend/src/: App.vue
app/scaffolding_frontend/src/api/: comments.ts
app/scaffolding_frontend/src/pages/: ModerationPage.vue
app/telegram/: models.py  runner.py  schemas.py  service.py
app/telegram/parsers/: comment.py  post.py
app/vk/: models.py  parser.py  runner.py  schemas.py  scrapper.py  service.py  utils.py
app/vk/parsers/: comment.py  post.py
