[tool.poetry]
name = "osint-bot"
version = "0.1.0"
description = "Telegram osint bot"
authors = ["Kazantsev Artem <me@lokach.ru>"]
readme = "README.md"
package-mode=false

[tool.poetry.dependencies]
python = ">=3.14,<3.15"
pydantic = "^2.13.4"
aiogram = "^3.28.2"
pydantic-settings = "^2.14.1"
sqlalchemy = "^2.0.49"
alembic = "^1.18.4"
asyncpg = "^0.31.0"
selenium = "^4.44.0"
playwright = "^1.60.0"
loguru = "^0.7.3"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
pre-commit = "^4.0.1"
black = "^24.10.0"
ruff = "^0.8.3"
mypy = "^1.13.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"

[tool.black]
line-length = 89
include = '\.pyi?$'

[tool.ruff]
lint.select = ["F", "E", "W", "I", "N", "PL", "C", "B"]
line-length = 89

[tool.pytest.ini_options]
pythonpath = [
    ".", "app"
]
